tests/testcases/errors/BCE0089-12.boo
"""
BCE0089-12.boo(8,5): BCE0089: Type 'test' already has a definition for '_model'.
"""
class test:
	//[property(Model)]
	_model as object

	_model as object
	
	def foo():
		return self._model

t = test()
